# Aspose.Cells-for-Python-via-.NET

./: README.md
Example/: Convert.py  ConvertToDataFrame.py  ConvertToHTMLviaStream.py  ConvertToJSONviaStream.py  ConvertToJson.py  ConvertToMd.py  ConvertToMdviaStream.py  ConvertToPDF.py  CreateChart.py  HelloWorld.py  SetStyle.py
Example/Data/01_SourceDirectory/: SampleCsv.csv  SampleTSVFile.tsv
Example/Data/02_OutputDirectory/: PrintHeadings_out.html  outputExcludeUnusedStylesInExcelToHTML.html  outputExportDocumentWorkbookAndWorksheetPropertiesInHTML.html  outputExportSimilarBorderStyle.html  outputExportWorksheetCSSSeparately.html  outputHidingOverlaidContentWithCrossHideRightWhileSavingToHtml.html  outputInlineCharts.html  outputSampleSingleSheet.htm  outputTableCssId.html  outsampleForScalableColumns.html  (+1 more)
Examples_GridJs_Python_Net/: Dockerfile  config.ini  main.py  readme.md  readme.md.bak  requirements.txt
Examples_GridJs_Python_Net/static/: xspreadsheet.js
Examples_GridJs_Python_Net/templates/: index.html  index.html.bak  list.html  uidload.html  uidload.html.bak
Mainstream Framework Integration/Django/: README.md  manage.py
Mainstream Framework Integration/Flask/: ReadMe.md  app.py  requirements.txt
Mainstream Framework Integration/MatPlotlib/: CreateByExcel.py  MatplotAsposeCells.py  input.xlsx
Mainstream Framework Integration/Scikit-learn/: ReadMe.md  ml_report.py
Mainstream Framework Integration/TensorFlow/: ReadMe.md  tensorFlowAspose.py
Mainstream Framework Integration/scipy_agent/: README.md  requirements.txt
Plugin/docling/: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  test.xlsx
Plugin/marker/: README.md  pyproject.toml  test.xlsx
Plugin/markitdown-aspose-cells-plugin/: README.md  pyproject.toml  test.py
Plugin/markitdown-aspose-cells-plugin/src/markitdown_aspose_cells_plugin/: __about__.py  __init__.py  _plugin.py
Plugin/markitdown-aspose-cells-plugin/tests/: __init__.py  test_aspose_cells_plugin.py
Plugin/markitdown-aspose-cells-plugin/tests/test_files/: test.ods  test.xls  test.xlsb  test.xlsm  test.xlsx  test.xlt
(+780 files in other folders)
